Skapat rensla alla knapp samt css för den

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="input-section">
             <input type="text" id="todo-input" placeholder="Vad ska du göra?">
             <button id="add-btn" class="add-button">Lägg till</button>
-            <!-- TODO: Bara "Lägg till" knapp finns - var är "Rensa" och "Ta bort alla"? -->
+            <button id="clear-btn" class="clear-button">Rensa alla</button>
         </div>
 
         <!-- Todo-listan -->
